--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
         let mirrorServerUrl = localStorage.getItem('mirrorServerUrl');
         
         if (!mirrorServerUrl) {
-          mirrorServerUrl = prompt('Enter mirror server address (e.g., http://10.0.0.107:8000):');
+          mirrorServerUrl = prompt('Enter server address:');
           if (!mirrorServerUrl) return;
         } else {
           // Ask if they want to use the saved URL or enter a new one
           const useSaved = confirm(`Use saved server: ${mirrorServerUrl}?\n\nClick OK to use this server, or Cancel to enter a new one.`);
           if (!useSaved) {
             localStorage.removeItem('mirrorServerUrl');
-            mirrorServerUrl = prompt('Enter mirror server address (e.g., http://10.0.0.107:8000):');
+            mirrorServerUrl = prompt('Enter server address:');
             if (!mirrorServerUrl) return;
           }
         }
