--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="KEMS, Kinetic Energy Management System, self-observation, device-based therapy, getkems.com, emotional awareness, grounding">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://getkems.com/">
-  <title>KEMS — Kinetic Energy Management System | getkems.com</title>
+  <title>KEMS — Kinetic Energy Management System</title>
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="KEMS — Kinetic Energy Management System">
   <meta property="og:description" content="Device-based self-observation system that records sessions for reflection, coaching, and therapeutic growth.">
