--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     }
 
     body.dark {
-      --bg: #0b0d10;
-      --card: #0f1113;
+      --bg: #010101;
+      --card: #0B0B0B;
       --text: #e6eef6;
       --accent: rgba(255,255,255,0.09);
     }
