--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="topbar">
       <div class="logo"></div>
     </div>
-    <p><strong>KEMS</strong> (Kinetic Energy Management System) provides a framework for exploring moments, offering a space to revisit experiences and gain insight into personal and emotional currents, leading to avenues for growth. By creating a space for the iterative examination of experiential episodes, it enables the analysis of underlying emotional dynamics, cognitive patterns, and behavioral tendencies. Over extended periods, KEMS supports the cultivation of heightened self-awareness and reflective acuity, offering a platform for nuanced observation akin to controlled longitudinal studies in clinical or experimental settings.</p>
+    <p><strong>KEMS</strong> (Kinetic Energy Management System) provides a framework for exploring moments, offering a space to revisit experiences and gain insight into personal and emotional currents, leading to avenues for growth. </p> By creating a space for the iterative examination of experiential episodes, it enables the analysis of underlying emotional dynamics, cognitive patterns, and behavioral tendencies. Over extended periods, KEMS supports the cultivation of heightened self-awareness and reflective acuity, offering a platform for nuanced observation akin to controlled longitudinal studies in clinical or experimental settings.</p>
   </div>
 
   <div class="footer">
