--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       --bg: #f4f4f4;
       --card: #fff;
       --text: #222;
-      --accent: #111;
       --max-width: 900px;
       --radius: 10px;
       --footer-height: 90px;
@@ -25,7 +24,6 @@
       background-color: var(--bg);
       color: var(--text);
       margin: 0;
-      padding: 0;
       min-height: 100vh;
       padding-bottom: var(--footer-height);
       -webkit-font-smoothing: antialiased;
@@ -42,6 +40,15 @@
       line-height: 1.5;
     }
 
+    /* MOBILE EDGE FIX */
+    @media (max-width: 480px) {
+      .container {
+        width: calc(100% - 24px);
+        margin: 12px auto;
+        padding: 16px;
+      }
+    }
+
     p {
       margin: 0;
     }
@@ -55,7 +62,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: transparent;
       pointer-events: none;
     }
 
@@ -88,12 +94,14 @@
   </div>
 
   <div class="footer">
-    <img src="kems-logo2.png"
-         alt="KEMS logo"
-         id="footer-logo-toggle"
-         tabindex="0"
-         role="button"
-         aria-label="Toggle theme">
+    <img
+      src="kems-logo2.png"
+      alt="KEMS logo"
+      id="footer-logo-toggle"
+      tabindex="0"
+      role="button"
+      aria-label="Toggle theme"
+    >
   </div>
 
   <script>
