--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="KEMS (Kinetic Energy Management System) is a reflective platform designed to capture real moments and transform them into insight.">
-  <meta name="keywords" content="KEMS, Kinetic Energy Management System, self-observation, emotional awareness, personal growth">
-  <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://getkems.com/">
   <title>KEMS</title>
 
   <style>
@@ -14,7 +11,6 @@
       --bg: #f4f4f4;
       --card: #fff;
       --text: #222;
-      --max-width: 900px;
       --radius: 10px;
       --footer-height: 90px;
     }
@@ -26,25 +22,23 @@
       margin: 0;
       min-height: 100vh;
       padding-bottom: var(--footer-height);
-      -webkit-font-smoothing: antialiased;
     }
 
     .container {
-      width: 92%;
-      max-width: var(--max-width);
-      margin: clamp(20px, 6vw, 48px) auto;
-      padding: clamp(14px, 2.5vw, 24px);
+      max-width: 900px;
+      margin: 24px auto;
+      padding: 20px;
       background: var(--card);
       border-radius: var(--radius);
       box-shadow: 0 6px 24px rgba(11,12,14,0.06);
       line-height: 1.5;
     }
 
-    /* MOBILE EDGE FIX */
+    /* MOBILE — HARD EDGE CONTROL */
     @media (max-width: 480px) {
       .container {
-        width: calc(100% - 24px);
-        margin: 12px auto;
+        margin-left: 8px;
+        margin-right: 8px;
         padding: 16px;
       }
     }
@@ -67,7 +61,6 @@
 
     .footer img {
       height: 48px;
-      width: auto;
       cursor: pointer;
       pointer-events: auto;
     }
@@ -94,14 +87,7 @@
   </div>
 
   <div class="footer">
-    <img
-      src="kems-logo2.png"
-      alt="KEMS logo"
-      id="footer-logo-toggle"
-      tabindex="0"
-      role="button"
-      aria-label="Toggle theme"
-    >
+    <img src="kems-logo2.png" alt="KEMS logo" id="footer-logo-toggle">
   </div>
 
   <script>
@@ -113,36 +99,16 @@
         body.classList.remove('light','dark');
         body.classList.add(t);
         try { localStorage.setItem('site-theme', t); } catch(e){}
-        if (logo) {
-          logo.src = (t === 'dark') ? 'kems-logo1.png' : 'kems-logo2.png';
-        }
+        logo.src = t === 'dark' ? 'kems-logo1.png' : 'kems-logo2.png';
       }
 
-      const saved = (() => {
-        try { return localStorage.getItem('site-theme'); } catch(e){ return null; }
-      })();
+      const saved = localStorage.getItem('site-theme');
+      if (saved) setTheme(saved);
+      else setTheme(window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
 
-      if (saved === 'dark' || saved === 'light') {
-        setTheme(saved);
-      } else {
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        setTheme(prefersDark ? 'dark' : 'light');
-      }
-
-      if (logo) {
-        logo.addEventListener('click', () => {
-          const current = body.classList.contains('dark') ? 'dark' : 'light';
-          setTheme(current === 'dark' ? 'light' : 'dark');
-        });
-
-        logo.addEventListener('keydown', e => {
-          if (e.key === 'Enter' || e.key === ' ') {
-            e.preventDefault();
-            const current = body.classList.contains('dark') ? 'dark' : 'light';
-            setTheme(current === 'dark' ? 'light' : 'dark');
-          }
-        });
-      }
+      logo.addEventListener('click', () => {
+        setTheme(body.classList.contains('dark') ? 'light' : 'dark');
+      });
     })();
   </script>
 </body>
