--- a/mirrorsim.html
+++ b/mirrorsim.html
@@ -30,13 +30,18 @@
     border-radius: 20px;
     outline: 5px solid #1a1a1a;
     outline-offset: 8px;
-    box-shadow: inset 0 2px 4px rgba(0,0,0,0.3), 0 0 20px rgba(255, 200, 0, 0.8);
+    box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
     color: transparent;
     text-shadow: none;
     overflow: hidden;
     margin-top: 50px;
-    margin-bottom: 40px;
+    margin-bottom: 100px;
     position: relative;
+    transition: box-shadow 0.3s ease;
+  }
+
+  #log.recording {
+    box-shadow: inset 0 2px 4px rgba(0,0,0,0.3), 0 0 20px rgba(255, 200, 0, 0.8);
   }
 
   @media (min-width: 768px) {
@@ -200,12 +205,16 @@ function updatePill(state) {
     pill.style.background = "transparent";
     pill.style.opacity = "0.3";
     pill.style.border = "2px solid #444";
+    log.classList.remove("recording");
   } else if (state === "boot") {
     pill.classList.add("booting");
+    log.classList.remove("recording");
   } else if (state === "recording") {
     pill.classList.add("recording");
+    log.classList.add("recording");
   } else if (state === "on") {
     pill.classList.add("on");
+    log.classList.remove("recording");
   }
 }
 
